# Umjaho

./: .gitignore  .gitmodules  CMakeLists.txt  DOCS.md  README.md
api/: server.js
cmake/: RunTests.cmake
include/datatypes/: CircularBuffer.h  CircularBuffer.tpp
include/engine/: Renderer.h
include/engine/scenes/: NitroBattery.h  Scene.h  SceneElement.h  SceneManager.h  Text.h
include/engine/scenes/controls/: AudioButton.h  AudioControl.h  Button.h  Control.h  LevelButton.h  LevelButton.tpp
include/engine/scenes/scenes/: Checkpoint.h  Credits.h  Leaderboard.h  Level.h  Level1.h  Level2.h  Level3.h  LevelMenu.h  MainMenu.h  Menu.h  PauseMenu.h  SettingsMenu.h
include/engine/sounds/: Sound.h  SoundManager.h  SoundPlayback.h
include/game/: Event.h  Game.h
include/game/entities/: Bot.h  Car.h  MiddleLiner.h  Opponent.h  Player.h  StraightMaster.h
include/game/entities/obstacles/: Barrier.h  Cone.h  Gate.h  Obstacle.h  Oil.h  SpeedBump.h  Water.h
include/game/entities/powerups/: Nitro.h  PlaceObstacle.h  PowerUp.h
include/game/entities/surfaces/: Curb.h  Dirt.h  FinishLine.h  Ice.h  Surface.h
include/game/entity/: Button.h  Car.h  Opponent.h  Player.h
include/game/entity/obstacles/: Barrier.h  Obstacle.h
include/game/entity/powerups/: Nitro.h  PowerUp.h
include/math/: Ray.h  Vec2.h
include/scenes/: Scene.h  SceneManager.h  TestScene.h
registerApp/: App.tsx  app.json  package-lock.json  package.json
registerApp/components/: Main.tsx  MyButton.tsx
registerApp/screens/: LoginScreen.tsx
src/: main.cpp
src/engine/: Renderer.cpp
src/engine/scenes/: NitroBattery.cpp  Scene.cpp  SceneElement.cpp  SceneManager.cpp  Text.cpp
src/engine/scenes/controls/: AudioButton.cpp  AudioControl.cpp  Button.cpp  Control.cpp  LevelButton.cpp
src/engine/scenes/scenes/: Checkpoint.cpp  Credits.cpp  Leaderboard.cpp  Level.cpp  Level1.cpp  Level2.cpp  Level3.cpp  LevelMenu.cpp  MainMenu.cpp  Menu.cpp  PauseMenu.cpp  SettingsMenu.cpp
src/engine/sounds/: Sound.cpp  SoundManager.cpp  SoundPlayback.cpp
src/game/: Game.cpp
src/game/entities/: Bot.cpp  Button.cpp  Car.cpp  MiddleLiner.cpp  Opponent.cpp  Player.cpp  StraightMaster.cpp
src/game/entities/obstacles/: Barrier.cpp  Cone.cpp  Gate.cpp  Obstacle.cpp  Oil.cpp  SpeedBump.cpp  Water.cpp
src/game/entities/powerup/: Nitro.cpp  PowerUp.cpp
src/game/entities/powerups/: Nitro.cpp  PlaceObstacle.cpp  PowerUp.cpp
src/game/entities/surfaces/: Curb.cpp  Dirt.cpp  FinishLine.cpp  Ice.cpp  Surface.cpp
src/scenes/: SceneManager.cpp  TestScene.cpp
tests/assets/: CMakeLists.txt  main.cpp
tests/intersection/: CMakeLists.txt  main.cpp
