cmake_minimum_required(VERSION 3.27)
project(Umjaho)

enable_testing()

set(CMAKE_CXX_STANDARD 23)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_definitions(-DDEBUG)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")

add_subdirectory(libs/SDL EXCLUDE_FROM_ALL)


set(SDLTTF_VENDORED ON)

set(SDLTTF_FREETYPE ON)
set(SDLTTF_HARFBUZZ OFF)
set(SDLTTF_PLUTOSVG OFF)

set(SDLIMAGE_VENDORED ON)
set(SDLIMAGE_AVIF OFF)
set(SDLIMAGE_BMP ON)
set(SDLIMAGE_JPEG OFF)
set(SDLIMAGE_WEBP OFF)
set(SDLIMAGE_GIF OFF)
set(SDLIMAGE_JPG OFF)
set(SDLIMAGE_LBM OFF)
set(SDLIMAGE_PCX OFF)
set(SDLIMAGE_PNM OFF)
set(SDLIMAGE_QOI OFF)
set(SDLIMAGE_SVG OFF)
set(SDLIMAGE_TGA OFF)
set(SDLIMAGE_TIF OFF)
set(SDLIMAGE_XCF OFF)
set(SDLIMAGE_XPM OFF)
set(SDLIMAGE_XV OFF)
set(SDLIMAGE_STB OFF)

add_subdirectory(libs/SDL_ttf EXCLUDE_FROM_ALL)
add_subdirectory(libs/SDL_image EXCLUDE_FROM_ALL)


file(GLOB_RECURSE HEADERS "include/*.h")
file(GLOB_RECURSE SOURCES "src/*.cpp")

add_executable(${CMAKE_PROJECT_NAME} WIN32 ${SOURCES} ${HEADERS})

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE include)
file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC SDL3::SDL3 SDL3_image::SDL3_image SDL3_ttf::SDL3_ttf)
#target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${SDL_IMAGE_INCLUDE_DIRS})



include(InstallRequiredSystemLibraries)
set(CPACK_PACKAGE_NAME "Umjaho")
set(CPACK_PACKAGE_VERSION "1.0.0")
set(CPACK_GENERATOR "ZIP")
set(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")


#install(FILES ${SDL3_LIBRARY} DESTINATION libs)
install(DIRECTORY assets/ DESTINATION assets)
install(TARGETS Umjaho DESTINATION bin)
install(FILES $<TARGET_FILE:SDL3::SDL3> DESTINATION bin)
install(FILES $<TARGET_FILE:SDL3_image::SDL3_image> DESTINATION bin)
install(FILES $<TARGET_FILE:SDL3_ttf::SDL3_ttf> DESTINATION bin)

include(CPack)

#include(RunTests)